# blank_cmake_project

./: CMakeLists.txt  LICENSE  README.md  main.cpp  myfunctions.cpp  myfunctions.hpp  mytests.cpp
